add default value to false, code refactoring (use only one function for atm and tpos

--- a/templates/tpos/index.html
+++ b/templates/tpos/index.html
@@ -330,7 +330,9 @@
         },
         formDialog: {
           show: false,
-          data: {}
+          data: {
+            atm: false
+          }
         }
       }
     },
