--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -56,7 +56,7 @@
     <q-page-sticky position="top-right" :offset="[18, 162]">
       <q-btn
         :disabled="amount == 0"
-        @click="readAtmNfcTag"
+        @click="readNfcTag('atm')"
         fab
         color="primary"
       />ATM</q-btn>
@@ -374,7 +374,7 @@
             LNbits.utils.notifyApiError(error)
           })
       },
-      readNfcTag: function () {
+      readNfcTag: function (atm=false) {
         try {
           const self = this
 
@@ -423,79 +423,15 @@
 
               //User feedback, show loader icon
               self.nfcTagReading = false
-              self.payInvoice(lnurl, readerAbortController)
 
-              this.$q.notify({
-                type: 'positive',
-                message: 'NFC tag read successfully.'
-              })
-            }
-          })
-        } catch (error) {
-          this.nfcTagReading = false
-          this.$q.notify({
-            type: 'negative',
-            message: error
-              ? error.toString()
-              : 'An unexpected error has occurred.'
-          })
-        }
-      },
-      readAtmNfcTag: function () {
-        try {
-          const self = this
-
-          if (typeof NDEFReader == 'undefined') {
-            throw {
-              toString: function () {
-                return 'NFC not supported on this device or browser.'
+              if (atm){
+                axios.get(lnurl.replace('lnurlw://', 'https://')).then(function (response) {
+                  console.log(response.data.payLink)
+                  self.makeAtmWithdraw(response.data.payLink, readerAbortController)
+                })
+              } else {
+                self.payInvoice(lnurl, readerAbortController)
               }
-            }
-          }
-
-          const ndef = new NDEFReader()
-
-          const readerAbortController = new AbortController()
-          readerAbortController.signal.onabort = event => {
-            console.log('All NFC Read operations have been aborted.')
-          }
-
-          this.nfcTagReading = true
-          this.$q.notify({
-            message: 'Tap your NFC tag to pay this invoice with LNURLw.'
-          })
-
-          return ndef.scan({signal: readerAbortController.signal}).then(() => {
-            ndef.onreadingerror = () => {
-              self.nfcTagReading = false
-
-              this.$q.notify({
-                type: 'negative',
-                message: 'There was an error reading this NFC tag.'
-              })
-
-              readerAbortController.abort()
-            }
-
-            ndef.onreading = ({message}) => {
-              //Decode NDEF data from tag
-              const textDecoder = new TextDecoder('utf-8')
-
-              const record = message.records.find(el => {
-                const payload = textDecoder.decode(el.data)
-                return payload.toUpperCase().indexOf('LNURL') !== -1
-              })
-
-              const lnurl = textDecoder.decode(record.data)
-
-              //User feedback, show loader icon
-              self.nfcTagReading = false
-              //self.payInvoice(lnurl, readerAbortController)
-
-              axios.get(lnurl.replace('lnurlw://', 'https://')).then(function (response) {
-                console.log(response.data.payLink)
-                self.makeAtmWithdraw(response.data.payLink, readerAbortController)
-              })
 
               this.$q.notify({
                 type: 'positive',
