abort the nfc reading after each run

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -437,6 +437,7 @@
                 type: 'positive',
                 message: 'NFC tag read successfully.'
               })
+              readerAbortController.abort()
             }
           })
         } catch (error) {
