hide the success screen automatically after payment (5s)

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -357,6 +357,9 @@
                     dialog.show = false
 
                     self.complete.show = true
+                    setTimeout(function () {
+                      self.complete.show = false
+                    }, 5000)
                   }
                 })
             }, 3000)
